tests/ui/type-alias-impl-trait/define_opaques_attr/non_type.stderr
error[E0573]: cannot find type alias or associated type with opaqaue types `foo` in this scope
  --> $DIR/non_type.rs:5:17
   |
LL | #[define_opaque(foo)]
   |                 ^^^ not found in this scope
   |
   = note: a function named `foo` exists in another namespace

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0573`.
